<resources>
    <string name="app_name">Bank99</string>

    <!-- Login -->
    <string name="login_title">Bank99 Login</string>
    <string name="hint_username">Username (e.g. C10001)</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
...
